# media-server

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  TEST_SUMMARY.md  app.py  config.json  dev-requirements.txt  img_utils.py  img_utils_test.ipynb  pyproject.toml  requirements.txt
assets/: index.css  index.js
src/: __init__.py
src/hanzi_sort/: demo.py  dictionary.txt
src/media_server/: __init__.py  app.py  browse.py  config.py  img_utils.py  media_handlers.py  models.py  tag_handlers.py
templates/: clips.html  index.css  index.html  video_clip_marker.html
tests/: conftest.py  test_app.py  test_browse.py  test_config.py  test_img_utils.py  test_media_handlers.py  test_models.py  test_tag_handlers.py  test_tags_url.py
