[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = 'black'

[tool.ruff]
line-length = 88
target-version = 'py310'
extend-select = ['E', 'F', 'I', 'C', 'B']

[tool.mypy]
python_version = 3.10
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
[project]
name = "media-server"
version = "0.1.0"
description = "Web based media browser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "natsort>=8.4.0",
    "pillow>=12.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
